added adjustment css structure

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,3 @@
-<style>
 html {
   background: rgb(206, 222, 189);
   color: #fff;
@@ -21,16 +20,17 @@ header{
   padding-top: 25px;
   padding-bottom: 3px;
 }
+
 .navbar{
   background-color: white;
   text-align: center;
-  }
- 
- .navbar li{
+}
+
+.navbar li{
    display: inline;
- }
+}
  
- .navbar li a{
+.navbar li a{
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   margin-top: 0;
@@ -40,8 +40,9 @@ header{
   text-decoration: none;
   font-size: 18px;
   color: rgb(67, 83, 52);
- }
- .hero-image {
+}
+
+.hero-image {
   background-image: url(Home.png);
   height: 500px;
   background-size: cover;
@@ -78,8 +79,8 @@ header{
   padding-top: 5px;
   padding-bottom: 5px;
   cursor: pointer;
-
 }
+
 .title-news{
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
@@ -89,6 +90,7 @@ header{
   font-size: 50;
   padding: 20px 20px 20px 20px;
 }
+
 .grid-container {
   border: 1px solid gray;
   display: grid;
@@ -118,6 +120,7 @@ header{
   align-items: left;
   justify-items: left;
 }
+
 .text-article b{
   font-size: 30px;
   color: white;
@@ -134,20 +137,23 @@ header{
 }
   .text-article,
   .picture-news {
-    grid-column: auto;
+   grid-column: auto;
 }
+
 .container-news {
   display: flex;
   width: 100%;
   margin: auto;
   position: relative;
 }
+
 .column{
   display: block;
   width: 100px;
   height: 100px;
   padding: 5px;
 }
+
 .container-news {
   display: block;
   width: 100px;
@@ -157,42 +163,50 @@ header{
   justify-content: left;
   text-align: left;
 }
+
 img {
   width: 100%;
   height: auto;
 }
+
 .sender-picture-container {
   margin-right: 10px;
   border-radius: 100px;
 }
+
 .sender-picture {
   object-fit: cover;
   border-radius: 500px;
 }
+
 .grid {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
   height: auto;
 }
+
 .col-33 {
   width: 33.33%;
   float: left;
   box-sizing: border-box;
   padding: 0 15px;
 }
+
 .col-33 h3{
   color: black;
   font-weight: bold;
   justify-content: center;
   align-items: center;
 }
+
 .col-33 p{
   text-align: left;
   justify-content: left;
   color: #484848;
   margin: 15px 15px 15px 15px;
 }
+
 footer{
   font-family: Arial, Helvetica, sans-serif;
   padding: 10px;
@@ -208,7 +222,6 @@ footer h4{
   color: white;
   font-size: 10px;
 }
-
 
 /* Mobile (min-width: 320px) */
 @media screen and (min-width: 320px) and (max-width: 667px) {
@@ -263,7 +276,8 @@ footer h4{
     width: 100%;
     box-sizing: border-box;
     padding-top: 10px;
-    padding-bottom: 10px;  }
+    padding-bottom: 10px;
+  }
 
   .col-33 h3 {
     color: black;
@@ -358,7 +372,8 @@ footer h4{
     float: left;
     box-sizing: border-box;
     padding-top: 10px;
-    padding-bottom: 10px;  }
+    padding-bottom: 10px;
+  }
 
   .col-33 h3 {
     color: black;
