update names pictures

--- a/code/style.css
+++ b/code/style.css
@@ -43,7 +43,7 @@ header{
 }
 
 .hero-image {
-  background-image: url(Home.png);
+  background-image: url(item1.png);
   height: 500px;
   background-size: cover;
   display: flex;
