--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,69 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  padding: 0; 
+  margin: 0;
+}
+
+.flex-container  {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #264653;
+}
+
+.logo {
+  margin: .5em;
+}
+
+.navbar  {
+  display: flex;
+  list-style: none;
+  text-transform: uppercase;
+}
+
+.navbar a {
+  display: block;
+  padding: 1em;
+  color: white;
+  text-decoration: none;
+  letter-spacing: .5rem;
+}
+
+.navbar a:hover {
+    color: #2a9d8f;
+}
+
+@media (max-width: 1024px) {
+  .flex-container {
+    flex-direction: column;
+  }
+  
+  .logo {
+  margin: .3em, 0;
+}
+  
+  .navbar  {
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media (max-width: 666px) {
+  .logo {
+    margin: .25em 0;
+}
+  
+  .navbar {
+    flex-direction: column;
+  }
+  
+  .navbar a { 
+    text-align: center; 
+    padding: 10px;
+    border-top: 1px solid #2a9d8f; 
+    border-bottom: 1px solid #2a9d8f; 
+  }
+  
+  .navbar li:last-of-type a {
+    border-bottom: none;
+  }
 }
