--- a/code/style.css
+++ b/code/style.css
@@ -32,6 +32,24 @@
     color: #2a9d8f;
 }
 
+.grid-container {
+  display: grid;
+  grid-gap: 20px;
+  grid-auto-rows: 240px;
+}
+
+.card {
+  background-size: cover;
+}
+
+.card-big {
+  background-size: cover;
+}
+
+.card-tall {
+  background-size: cover;
+}
+
 @media (max-width: 1024px) {
   .flex-container {
     flex-direction: column;
@@ -65,5 +83,22 @@
   
   .navbar li:last-of-type a {
     border-bottom: none;
+  }
+}
+
+@media screen and (min-width: 667px) {
+  .card-big {
+    grid-row: span 2 / auto;
+    grid-column: span 2 / auto;
+  }
+
+  .card-tall {
+    grid-row: span 2 / auto;
+  }
+}
+
+@media (min-width: 1025px) {
+  .grid-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
