--- a/code/style.css
+++ b/code/style.css
@@ -1,14 +1,14 @@
 html {
   background: #f4d3f5;
   color: #858285;
-  font-family:serif;
+  font-family: serif;
 }
 
 a {
   text-decoration: none;
-  align-items:center;
+  align-items: center;
 }
-h1{
+h1 {
   padding: 10px;
   font-size: 40px;
 }
@@ -52,7 +52,7 @@ h1{
 .big-article,
 .medium-article,
 .end-article {
-  display:flex;
+  display: flex;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.25);
 }
@@ -126,15 +126,15 @@ h1{
 
 /* Normal */
 @media (min-width: 769px) and (max-width: 1200px) {
-	body {
-		background: #e3b6fa;
-	}
+  html {
+    background: #e3b6fa;
+  }
 
   .medium-news {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .final-news{
+  .final-news {
     grid-template-columns: 1fr;
   }
 
@@ -146,14 +146,19 @@ h1{
 
 /* Tablet */
 @media (min-width: 501px) and (max-width: 768px) {
-	body {
-		background: #98baf5;
-	}
+  html {
+    background: #98baf5;
+  }
+
   .medium-news {
     grid-template-columns: repeat(2, 1fr);
   }
-  
-  .medium-article img{
+
+  .final-news {
+    grid-template-columns: 1fr;
+  }
+
+  .medium-article img {
     height: fit-content;
     width: 100%;
   }
@@ -162,15 +167,11 @@ h1{
     height: fit-content;
     width: 100%;
   }
-
-  .final-news{
-    grid-template-columns: 1fr;
-  }
 }
 
 /* SmartPhones*/
-@media only screen and (max-width:500px) {
-  body {
+@media (max-width: 500px) {
+  html {
     background: #fae3cf;
   }
   .big-article,
@@ -178,7 +179,7 @@ h1{
     flex-direction: column;
   }
 
-  .big-article__text-content, 
+  .big-article__text-content,
   .end-article__text-content {
     padding: 0 40px;
   }
@@ -187,12 +188,12 @@ h1{
     grid-template-columns: 1fr;
   }
 
-  .final-news{
+  .final-news {
     grid-template-columns: 1fr;
   }
-  .main-links{
+  .main-links {
     flex-direction: column;
-  } 
+  }
 
   .history,
   .inspiration,
@@ -200,7 +201,7 @@ h1{
     padding: 20px;
   }
 
-  h1{
+  h1 {
     display: block;
   }
 }
