added images and text

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,17 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #ffff;
+}
+
+h1 {
+  color: black;
+  text-align: center;
+}
+
+h2 {
+  color: black;
+}
+
+.white-box {
+  background-color: aquamarine;
+  padding: 25px;
 }
