--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,26 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #fff;
+  color: #000;
+}
+
+.grid-wrapper {
+  display: grid;
+  grid-template-columns: repeat(12, [col-start] 1fr);
+  gap: 1.75rem;
+}
+
+.grid-wrapper > * {
+  grid-column: col-start / span 12;
+}
+
+@media (min-width: 668px) {
+  .card-item {
+    grid-column: span 6;
+  }
+}
+
+@media (min-width: 1025px) {
+  .card-item {
+    grid-column: span 3;
+  }
 }
