--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,5 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background-color: transparent;
+  background-image: linear-gradient(170deg, #FDC5F2 0, #F8F8F8 800px);
+  color: #000;
 }
