styled header img, added images, styled p and more

--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,26 @@ html {
   background: white;
   color: #7badb1;
 }
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: flex;
+}
+
+header img {
+
+  display: block;
+  max-width: 100%;
+  height: auto;
+  width: 100px;
+  align-items: baseline;
+}
+
+p {
+  color: black;
+}
+
+header div {
+  display: flex;
+  align-items: baseline;
+}
