--- a/code/style.css
+++ b/code/style.css
@@ -1,9 +1,18 @@
 html {
+  box-sizing: border-box;
   background-color: transparent;
-  background-image: linear-gradient(180deg, #FDC5F2 0, #F8F8F8 800px);
+  background-image: linear-gradient(180deg, #99ad73 0, #F8F8F8 800px);
   color: #000;
 }
+body {
+  margin: 0;
+}
+/* header */
 header {
+  margin: 0;
+}
+.header-content-width {
+  margin: 0 3.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -20,6 +29,10 @@ header {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-decoration: underline;
 }
+.nav-small-screen {
+  display: none;
+}
+
 .nav-desktop {
   width: 400px;
 }
@@ -30,4 +43,63 @@ header {
   font-weight: 600;
   display: flex;
   justify-content: space-around;
+}
+/* big news section */
+.big-news {
+  margin: 2rem 3.5rem;
+}
+.big-news-content-width {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 15px;
+}
+.big-news-img>img {
+  object-fit: cover;
+  width: 700px;
+  height: 500px;
+}
+.big-news-text>h1 {
+  font-size: 2.9rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+.big-news-text>h3 {
+  font-size: 1.6rem;
+  color: #fff;
+}
+
+/* small box news */
+.small-box-news {
+  margin: 0 3.5rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 15px;
+}
+.small-box-news-item {
+  background-color: #4c6051;
+  height: 300px;
+} 
+
+@media only screen and (max-width: 1600px) {
+  
+}
+@media only screen and (max-width: 1024px) {
+  body {
+    background-color: white;
+  }
+  .nav-small-screen {
+    display: inline-block;
+  }
+  .nav-small-screen {
+    list-style: none;
+    text-decoration: none;
+  }
+  .nav-desktop {
+    display: none;
+  }
+}
+@media only screen and (max-width: 520px) {
+  body {
+    background-color: pink;
+  }
 }
