--- a/style.css
+++ b/style.css
@@ -1,41 +1,145 @@
-html {
-
-    color: #fff;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 
-.card-news {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
-    /* En kolumn layout för mobiler */
-    /* Mellanrum mellan grid-elementen */
-    text-align: left;
-    /* Text och knapp vänsterställda */
-    padding: 70px;
-    background-color: #f5f5f5;
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+/* header {
+     max-width: 80%;
+    max-width: 800px;
+    background-color: aquamarine;
+    min-height: 200px;
+    padding: 2em;
+    margin-inline: auto;
+}
+
+*/
+
+main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  max-width: 2000px;
+  margin: auto;
 
 }
 
-.card-news img {
-    justify-self: center;
-    width: 100%;
-    height: auto;
-    /* Centrerar bilden */
+.card {
+  /* max-width: 100%; */
+
+  background-color: #FFECEA;
+  color: #000A64;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  grid-column: span 4;
+
+
 }
 
-.card-text {
-    justify-self: left;
-    color: black;
-    margin-bottom: 80px;
+.big-card {
+  grid-column: 1 / -1;
+  flex-direction: row;
+  gap: 30px;
+}
+
+.card-image {
+  width: 100%;
 
 }
 
-.card-button {
+.text-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 
-    padding: 10px 20px;
-    background-color: #080b0d;
-    color: white;
-    text-decoration: none;
-    margin: 8px;
+}
+
+h3 {
+  font-size: 32px;
+  margin-bottom: 0;
+
+
+}
+
+ul {
+
+  display: flex;
+  list-style-type: none;
+  gap: 8px;
+  padding-left: 0;
+}
+
+li {
+  background-color: black;
+  color: white;
+  padding: 4px;
+
+}
+
+/* Desktop och upp från 667px */
+@media (min-width: 667px) {
+  main {
+    grid-template-columns: repeat(8, 1fr);
+  }
+}
+
+/* Desktop och upp från 923px */
+@media (min-width: 923px) {
+  main {
+    grid-template-columns: repeat(12, 1fr);
+  }
+}
+
+/* Desktop och upp från 1200px */
+@media (min-width: 1200px) {
+  .card {
+    grid-column: span 3;
+  }
+}
+
+/* Surfplatta (768px till 922px) */
+@media (min-width: 768px) and (max-width: 922px) {
+  .big-card {
+    flex-direction: column;
+    grid-column: 1 / -1;
+  }
+
+  .card-image {
+    margin-bottom: 20px;
+    /* Avstånd mellan bilden och texten för surfplattor */
+  }
+}
+
+/* Mobil och mindre än 667px */
+@media (max-width: 667px) {
+  .big-card {
+    flex-direction: column;
+    grid-column: 1 / -1;
+  }
+}
+
+/* Desktop och upp från 923px */
+@media (min-width: 923px) {
+  .big-card {
+    flex-direction: row;
+    grid-column: 1 / -1;
+
+  }
+}
+
+/* Surfplatta (768px till 922px) */
+@media (min-width: 768px) and (max-width: 922px) {
+  .big-card {
+    flex-direction: column;
+    grid-column: 1 / -1;
+    align-items: flex-start;
+    /* Vänsterställ innehållet i big-card */
+  }
 }
