--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,9 @@
 html {
   background: white;
-  color: #7badb1;
+}
+
+title {
+  font-color: #7badb1;
 }
 
 * {
@@ -24,4 +27,31 @@ p {
 header div {
   display: flex;
   align-items: baseline;
+}
+
+nav {
+  display: flex;
+  text-decoration: none;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  background-color: #7badb1;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.nav-links {
+  list-style: none;
+}
+
+.nav-links li {
+  display: inline-block;
+  padding: 15px;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
 }
